feat: support bulk update for existing members by employee ID